deployments/gateway-api/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: traefik-gatewayclass
spec:
  controllerName: traefik.io/gateway-controller
