deployments/gateway-api/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: traefik-gatewayclass
spec:
  controller: traefik.io/gateway
  description: Traefik controller provided by k3s, driving Gateway API networking.
