deployments/gateway-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projectcontour
  labels:
    app.kubernetes.io/name: contour-gateway
