deployments/gateway-api/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: gateway-system-allow-cross-namespace
  namespace: gateway-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: default
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: argocd
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: portainer
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
