deployments/gateway-api/example-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: example-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-backend
  template:
    metadata:
      labels:
        app: example-backend
    spec:
      containers:
        - name: httpbin
          image: k8s.gcr.io/echoserver:1.10
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: example-backend
spec:
  selector:
    app: example-backend
  ports:
    - port: 8080
      targetPort: http
      name: http
  type: LoadBalancer
  loadBalancerIP: 192.168.100.220
