deployments/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: contour-gateway
  namespace: projectcontour
spec:
  gatewayClassName: contour-gatewayclass
  listeners:
    - name: http
      protocol: HTTP
      port: 80
