deployments/gateway-api/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  parentRefs:
    - name: contour-gateway
      namespace: projectcontour
  hostnames:
    - argocd.tesutotech.my.id
  rules:
    - matches:
        - path:
            type: Prefix
            value: /
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
