deployments/gateway-api/httproute-argo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: argocd
  name: gateway-argo
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: gateway-system
  hostnames:
    - argo.tesutotech.my.id
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 443
