deployments/gateway-api/httproute-portainer.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: portainer
  name: gateway-portainer
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: gateway-system
  hostnames:
    - portainer.tesutotech.my.id
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portainer
          namespace: portainer
          port: 9443
