deployments/gateway-api/portainer-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: portainer-gateway
  namespace: portainer
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-system
  hostnames:
    - portainer.tesutotech.my.id
  rules:
    - matches:
        - path:
            type: Prefix
            value: /
      backendRefs:
        - name: portainer
          namespace: portainer
          port: 9443
